@@ -19,7 +19,7 @@ CPPUNIT_NS_BEGIN
 DynamicLibraryManager::LibraryHandle 
 DynamicLibraryManager::doLoadLibrary( const std::string &libraryName )
 {
-  return ::LoadLibrary( libraryName.c_str() );
+  return ::LoadLibraryA( libraryName.c_str() );
 }
 
 
@@ -43,22 +43,22 @@ std::string
 DynamicLibraryManager::getLastErrorDetail() const
 {
   LPVOID lpMsgBuf;
-  ::FormatMessage( 
+  ::FormatMessageA( 
       FORMAT_MESSAGE_ALLOCATE_BUFFER | 
       FORMAT_MESSAGE_FROM_SYSTEM | 
       FORMAT_MESSAGE_IGNORE_INSERTS,
       NULL,
       GetLastError(),
       MAKELANGID(LANG_NEUTRAL, SUBLANG_DEFAULT), // Default language
-      (LPTSTR) &lpMsgBuf,
+      (LPSTR) &lpMsgBuf,
       0,
       NULL 
   );
 
-  std::string message = (LPCTSTR)lpMsgBuf;
+  std::string message = (LPCSTR)lpMsgBuf;
 
   // Display the string.
-//  ::MessageBox( NULL, (LPCTSTR)lpMsgBuf, "Error", MB_OK | MB_ICONINFORMATION );
+//  ::MessageBoxA( NULL, (LPCSTR)lpMsgBuf, "Error", MB_OK | MB_ICONINFORMATION );
 
   // Free the buffer.
   ::LocalFree( lpMsgBuf );
